--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "src/assets/scripts/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --out-dir public/ --public-url ."
+    "build": "parcel build src/index.html --out-dir public/ --public-url .",
+    "deploy": "gh-pages -d public"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^1.12.3",
+    "gh-pages": "^2.1.1",
+    "parcel": "^1.12.4",
     "sass": "^1.22.10"
   }
 }
